# TradingAgents

./: .env.example  .gitignore  HANDOFF.md  Openrouter-Context.md  PROJECT_DIARY.md  README.md  main.py  pyproject.toml  requirements.txt  run_backend.py  setup.py
cli/: main.py  utils.py
docs/: AUDIT_LOG_SCHEMA.md  STATE_SCHEMA.md
tests/agents/: test_memory_persistence.py  test_risk_manager.py
tests/app/: test_backend.py
tests/config/: test_default_config.py
tests/dataflows/: test_cache_layer.py  test_openai_vendor.py  test_route_caching.py
tests/graph/: test_llm_factory.py
tests/logging/: test_logging_utils.py
tests/utils/: test_audit_logger.py
tradingagents/: default_config.py  logging_utils.py
tradingagents-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
tradingagents-ui/src/: App.vue
tradingagents-ui/src-tauri/: Cargo.toml  tauri.conf.json
tradingagents-ui/src-tauri/src/: main.rs
tradingagents-ui/src/assets/: main.css
tradingagents-ui/src/components/: Dashboard.vue
tradingagents-ui/src/services/: api.ts
tradingagents-ui/src/types/: index.ts
tradingagents-ui/tests/unit/: dashboard.spec.ts
tradingagents/agents/managers/: risk_manager.py
tradingagents/agents/utils/: memory.py
tradingagents/app/: backend.py
tradingagents/app/models/: trade.py
tradingagents/dataflows/: cache.py  config.py  finnhub_api.py  interface.py  newsapi_client.py  openai.py
tradingagents/graph/: llm_factory.py  trading_graph.py
tradingagents/utils/: audit.py
(+2 files in other folders)
